@@ -1,41 +1,16 @@
 plugins {
     id "eclipse"
     id "idea"
-    id "io.sdkman.vendors"              version "1.1.1"     apply false
-    id "com.jfrog.bintray"              version "1.8.4"     apply false
-    id "com.github.kt3k.coveralls"      version "2.8.2"     apply false
-    id "org.sonarqube"                  version "2.7"     apply false
-    id 'com.github.ben-manes.versions'  version '0.20.0'
-    id "nebula.optional-base"           version "5.0.0"     apply false
+    id "io.sdkman.vendors"              version "1.2.1"     apply false
+    id "com.jfrog.bintray"              version "1.8.5"     apply false
+    id "com.github.kt3k.coveralls"      version "2.10.1"     apply false
+    id "org.sonarqube"                  version "2.8"       apply false
+    id 'com.github.ben-manes.versions'  version '0.28.0'
+    id "nebula.optional-base"           version "5.0.3"     apply false
 }
 
 // common variables
 ext {
-    asciidoctorjVersion = '1.5.8.1'
-    asciidoctorjDiagramVersion = '1.5.11'
-    commonsIoVersion = '2.6'
-    commonsConfigurationVersion = '1.10'
-    commonsLangVersion = '3.8.1'
-    commonsVfs2Version = '2.2'
-    args4jVersion = '2.33'
-    freemarkerVersion = '2.3.28'
-    junit4Version = '4.12'
-    junit5Version = '5.3.1'
-    junitPioneer = '0.2.2'
-    flexmarkVersion = '0.40.8'
-    jettyServerVersion = '9.4.12.v20180830'
-    orientDbVersion = '3.0.14'
-    groovyVersion = '2.5.5'
-    slf4jVersion = '1.7.25'
-    logbackVersion = '1.2.3'
-    assertjCoreVersion = '2.9.1'
-    thymeleafVersion = '3.0.11.RELEASE'
-    jsonSimpleVersion = '1.1.1'
-    jade4jVersion = '1.2.7'
-    mockitoVersion = '2.23.4'
-    jsoupVersion = '1.11.3'
-    pebbleVersion = '3.0.7'
-
     isTravis = (System.getenv("TRAVIS") == "true")
     isTravisPullRequest = (System.getenv("TRAVIS_PULL_REQUEST")) != "false"
     pullRequestId = System.getenv("TRAVIS_PULL_REQUEST")
@@ -91,10 +66,11 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'nebula.optional-base'
 
-    apply from: "$rootDir/gradle/signing.gradle"
     // We do not publish any jars from the jbake-dist project
     if ( project.name != "jbake-dist" ) {
       apply from: "$rootDir/gradle/maven-publishing.gradle"
+      apply from: "$rootDir/gradle/signing.gradle"
+      apply from: "$rootDir/gradle/publishing.gradle"
     }
 
     // add source and target compatibility for all JavaCompile tasks
@@ -117,25 +93,25 @@ subprojects {
     }
 
     dependencies {
-        compile "org.slf4j:slf4j-api:$slf4jVersion"
-        compile "org.slf4j:jul-to-slf4j:$slf4jVersion"
-        compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
-        compile "ch.qos.logback:logback-classic:$logbackVersion", optional
-        compile "ch.qos.logback:logback-core:$logbackVersion", optional
+        implementation "org.slf4j:slf4j-api:$slf4jVersion"
+        implementation "org.slf4j:jul-to-slf4j:$slf4jVersion"
+        implementation "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+        implementation "ch.qos.logback:logback-classic:$logbackVersion", optional
+        implementation "ch.qos.logback:logback-core:$logbackVersion", optional
 
-        testCompile("org.junit.jupiter:junit-jupiter-api:$junit5Version")
-        testRuntime("org.junit.jupiter:junit-jupiter-engine:$junit5Version")
-        testCompile("org.junit-pioneer:junit-pioneer:$junitPioneer")
+        testImplementation "org.junit-pioneer:junit-pioneer:$junitPioneer"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5Version"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit5Version"
         // compatibility for Junit 4 test
-        testCompile "junit:junit:$junit4Version"
-        testRuntime("org.junit.vintage:junit-vintage-engine:$junit5Version")
+        testCompileOnly "junit:junit:$junit4Version"
+        testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junit5Version"
 
-        testCompile "org.assertj:assertj-core:$assertjCoreVersion"
-        testCompile "org.mockito:mockito-core:$mockitoVersion"
-        testCompile "org.mockito:mockito-junit-jupiter:$mockitoVersion"
+        testImplementation "org.assertj:assertj-core:$assertjCoreVersion"
+        testImplementation "org.mockito:mockito-core:$mockitoVersion"
+        testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
     }
 
-    dependencyUpdates.resolutionStrategy = {
+    dependencyUpdates.resolutionStrategy {
         componentSelection { rules ->
             rules.all { ComponentSelection selection ->
                 boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
@@ -152,13 +128,6 @@ subprojects {
     tasks.withType(Test) {
 
         def args = ['-Xms512m', '-Xmx3g', '-Dorientdb.installCustomFormatter=false=false','-Djna.nosys=true']
-
-        /**
-         * AppVeyor breaks with mockito throwing a java.lang.OutOfMemoryError: PermGen space
-         */
-        if ( JavaVersion.current().java7 ) {
-            args << '-XX:MaxPermSize=2g'
-        }
 
         /**
          * jdk9 build is unable to determine the amount of MaxDirectMemorySize
